[workspace]
members = [
    "packages/app",
    "packages/app/models",
    "packages/app/ui",
    "packages/git_provider",
    "packages/git_provider/models",
    "packages/github",
    "packages/github/models",
    "packages/pr",
    "packages/pr/models",
    "packages/state",
    "packages/syntax",
]
resolver = "2"

[workspace.package]
authors    = ["Braden Steffaniak <BradenSteffaniak@gmail.com>"]
edition    = "2024"
license    = "MPL-2.0"
repository = "https://github.com/BSteffaniak/chadreview"
version    = "0.1.0"

[workspace.dependencies]
chadreview_app_models          = { path = "packages/app/models", version = "0.1.0", default-features = false }
chadreview_git_provider_models = { path = "packages/git_provider/models", version = "0.1.0", default-features = false }
chadreview_github_models       = { path = "packages/github/models", version = "0.1.0", default-features = false }
chadreview_pr_models           = { path = "packages/pr/models", version = "0.1.0", default-features = false }

chadreview_app          = { path = "packages/app", version = "0.1.0", default-features = false }
chadreview_app_ui       = { path = "packages/app/ui", version = "0.1.0", default-features = false }
chadreview_git_provider = { path = "packages/git_provider", version = "0.1.0", default-features = false }
chadreview_github       = { path = "packages/github", version = "0.1.0", default-features = false }
chadreview_pr           = { path = "packages/pr", version = "0.1.0", default-features = false }
chadreview_state        = { path = "packages/state", version = "0.1.0", default-features = false }
chadreview_syntax       = { path = "packages/syntax", version = "0.1.0", default-features = false }

anyhow      = { version = "1", default-features = false }
async-trait = { version = "0.1", default-features = false }
chrono      = { version = "0.4", default-features = false }
reqwest     = { version = "0.11", default-features = false }
serde       = { version = "1", default-features = false }
serde_json  = { version = "1", default-features = false }
syntect     = { version = "5", default-features = false }
thiserror   = { version = "1", default-features = false }
tokio       = { version = "1", default-features = false }

hyperchad = { git = "https://github.com/MoosicBox/MoosicBox", branch = "master", default-features = false }
